--- a/roles/common/tasks/maildev.yml
+++ b/roles/common/tasks/maildev.yml
@@ -4,7 +4,7 @@
   debconf:
     name: postfix
     question: postfix/relayhost
-    value: localhost:1025
+    value: [localhost]:1025
     vtype: string
 
 - name: clone MailDev git repo
